"ajuste no layout page"

--- a/teste-backend/src/view/index.html
+++ b/teste-backend/src/view/index.html
@@ -57,7 +57,14 @@
         <input type="text" id="responsibleCpf" name="responsibleCpf" placeholder="Digite o CPF do responsável">
       </div>
 
+      <!-- Address Section Title -->
+      <h2>Endereço</h2>
+
       <!-- Endereço -->
+      <div class="form-group">
+        <label for="postalCode">CEP</label>
+        <input type="text" id="postalCode" name="postalCode" placeholder="Digite o CEP">
+      </div>
       <div class="form-group">
         <label for="street">Rua</label>
         <input type="text" id="street" name="street" placeholder="Digite a rua">
@@ -82,10 +89,7 @@
         <label for="state">Estado</label>
         <input type="text" id="state" name="state" placeholder="Digite o estado">
       </div>
-      <div class="form-group">
-        <label for="postalCode">CEP</label>
-        <input type="text" id="postalCode" name="postalCode" placeholder="Digite o CEP">
-      </div>
+      
 
       <!-- Termos -->
       <div class="form-group terms">
